added ExecutionContext to Command.execute